更换Base64加密工具类